fix the name wrapping issue on the photos

--- a/course_roster/static/course_roster/css/mobile.less
+++ b/course_roster/static/course_roster/css/mobile.less
@@ -4,6 +4,7 @@ body { background: none; font: 13px/1.5 "Helvetica Neue",Arial,"Liberation Sans"
 #main-wrapper { margin: 0; float: none; max-width: 940px; box-shadow: none; -webkit-box-shadow: none; height: auto !important; }
 .inner { margin: 0 1em !important; }
 
+.col-xs-3 { height: 180px !important; } //override for student photos page 
 
 #main-wrapper {
 
@@ -22,8 +23,13 @@ body { background: none; font: 13px/1.5 "Helvetica Neue",Arial,"Liberation Sans"
         a:hover { color: #0081bd; text-decoration: none; }
         .person-photo {
             img { height: 120px; margin-bottom: 6px; }
-        }
     }
+
+    .name-container { white-space: normal; min-width: 93px; line-height: 15px; 
+            span.name { font-weight: bold;}
+            span.login-id { margin-top: 3px; display: block; }
+            }
+        }
 
     .loading { text-align: center; }
     .hidden { display: none; }
